--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "my-portfolio",
+  "homepage": "https://SunainaAnand28.github.io/My-Portfolio",
+  "name": "tic-tac-toe",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/SunainaAnand28/My-Portfolio",  
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
